added map options

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   #map-canvas { height: 100% }
   </style>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+  <!--script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script-->
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
   <script src="js/namespace.js"></script>
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/bootstrap-responsive.css" rel="stylesheet">
@@ -40,9 +41,10 @@
             </fieldset>
           </form>
           <ul class="selection-list">
-            <li><div class="icon-holder"><i class="icon-ok"></i></div>Events</li>
             <li><div class="icon-holder"><i class="icon-ok"></i></div>Schools</li>
-            <li><div class="icon-holder"><i class="icon-ok"></i></div>Third filter</li>
+            <li><div class="icon-holder"><i class="icon-ok"></i></div>Events</li>
+            <li><div class="icon-holder"><i class="icon-ok"></i></div>Companies</li>
+            <li><div class="icon-holder"><i class="icon-ok"></i></div>Parking</li>
             </ul>
           </div>
         <div class= "span7">
